5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4413/executions/1828_3176.log
== TEST (2019-06-12 14:22:10) 
-- CODE:
from numpy import* 

x= array(eval(input(" ")))
v=0
c=0

for(x):
	if(x=a or x=e or x=i or x=o or x=u):
		v=v+1
	else:
		c=c+1
print(v)
print(c)
		
-- ERROR:
File "XXXX", line 7
    for(x):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:29:48) 
-- CODE:
from numpy import* 

x= array(eval(input(" ")))
v=0
c=0

for v and c range(len(v and c)):
	if(x=a or x=e or x=i or x=o or x=u):
		v=v+1
	else:
		c=c+1
print(v)
print(c)
		
-- ERROR:
File "XXXX", line 7
    for v and c range(len(v and c)):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:31:10) 
-- CODE:
from numpy import* 

x= array(eval(input(" ")))
v=0
c=0

for v and c range(len(v and c)):
	if(x=a or x=e or x=i or x=o or x=u):
		v=v+1
	else:
		c=c+1
print(v)
print(c)
		
-- EXECUTION TIME:
0.70066
-- ERROR:
  File "/home/codebench/codes/1828/3176/main.py", line 7
    for v and c range(len(v and c)):
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:31:50) 
-- CODE:
from numpy import* 

x= array(eval(input(" ")))
v=0
c=0

for v range(len(v)):
	if(x=a or x=e or x=i or x=o or x=u):
		v=v+1
	else:
		c=c+1
print(v)
print(c)
		
-- EXECUTION TIME:
0.846673
-- ERROR:
  File "/home/codebench/codes/1828/3176/main.py", line 7
    for v range(len(v)):
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:31:51) 
-- CODE:
from numpy import* 

x= array(eval(input(" ")))
v=0
c=0

for v range(len(v)):
	if(x=a or x=e or x=i or x=o or x=u):
		v=v+1
	else:
		c=c+1
print(v)
print(c)
		
-- ERROR:
File "XXXX", line 7
    for v range(len(v)):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:32:16) 
-- CODE:
from numpy import* 

x= array(eval(input(" ")))
v=0
c=0

for v in range(len(v)):
	if(x=a or x=e or x=i or x=o or x=u):
		v=v+1
	else:
		c=c+1
print(v)
print(c)
		
-- EXECUTION TIME:
0.692217
-- ERROR:
  File "/home/codebench/codes/1828/3176/main.py", line 8
    if(x=a or x=e or x=i or x=o or x=u):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:33:34) 
-- CODE:
from numpy import* 

x= array(eval(input(" ")))
v=0
c=0

for v in range(len(v)):
	if(x=a or x=e or x=i or x=o or x=u):
		v=v+1
	else:
		c=c+1
print(v)
print(c)
		
-- ERROR:
File "XXXX", line 8
    if(x=a or x=e or x=i or x=o or x=u):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:41:13) 
-- CODE:
string = input(" ")
string = string.lower()
vog = 0
con = 0 
for i in string:
	if i=="a" or "e" or "i" or "o" or "u":
		vog+=1 
	else:
		con+=1
print(vog)
print(con)
-- EXECUTION TIME:
0.580926
-- TEST CASE 1:
---- input:
cachorro
---- correct output:
3
5
---- user output:
8
0
-- TEST CASE 2:
---- input:
amazonia
---- correct output:
5
3
---- user output:
8
0
-- TEST CASE 3:
---- input:
qwrt
---- correct output:
0
4
---- user output:
4
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:41:40) 
-- CODE:
string = input(" ")
string = string.lower()
vog = 0
con = 0 
for i in string:
	if i=="a" or i=="e" or i=="i" or i=="o" or i=="u":
		vog+=1 
	else:
		con+=1
print(vog)
print(con)
-- EXECUTION TIME:
0.644829
-- TEST CASE 1:
---- input:
cachorro
---- correct output:
3
5
---- user output:
3
5
-- TEST CASE 2:
---- input:
amazonia
---- correct output:
5
3
---- user output:
5
3
-- TEST CASE 3:
---- input:
qwrt
---- correct output:
0
4
---- user output:
0
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
